--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,27 +4,33 @@ on:
   push:
     branches:
       - main  # Trigger deployment on push to the main branch
+  workflow_dispatch:  # Allows manual triggering of the workflow from GitHub UI
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use a GitHub-hosted runner (Ubuntu in this case)
 
     steps:
+      # Checkout your code from GitHub to the runner
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Set up Node.js for the React app (or any other JavaScript framework you're using)
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '14'  # Specify the Node.js version you want to use
 
-      - run: npm install  # Install dependencies (if applicable)
+      # Install dependencies listed in package.json (assumes you're using npm)
+      - run: npm install  # Runs npm install to install the project dependencies
 
-      - run: npm run build  # Build your React app (if needed)
+      # Build the app (assuming you're using React or a similar framework)
+      - run: npm run build  # Runs npm run build (or use the equivalent build command for your app)
 
+      # Deploy the built app to Firebase Hosting
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          firebase_project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
-          firebase_token: ${{ secrets.FIREBASE_AUTH_TOKEN }}
-          firebase_service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
+          firebase_project_id: ${{ secrets.FIREBASE_PROJECT_ID }}  # Replace with your Firebase project ID secret
+          firebase_token: ${{ secrets.FIREBASE_AUTH_TOKEN }}  # Firebase Authentication Token
+          firebase_service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}  # Service Account Key
